jam: some reorg in annotation override stuff, plus new test cases
git-svn-id: https://svn.apache.org/repos/asf/xmlbeans/trunk@111075 13f79535-47bb-0310-9956-ffa450edef68